# spritepack

./: .gitignore  Cargo.toml  setup.py
scripts/: generate.py
spritepack/: cli.py  packer.py
src/: errors.rs  lib.rs  main.rs  pack.rs
