[package]
name = "spritepack"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

[[bin]]
name = "spritepack"

[dependencies]
error-chain = "0.12.1"
image = "0.21.2"
log = "0.4"
petgraph = "0.4.13"
walkdir = "2.2"
regex = "1.5.5"
simple_logger = "1.3.0"

# Binary only
ansi_term = "0.11"
colored = "1.7"
clap = "2.33.0"
